--- a/Desktop/today/page1.html
+++ b/Desktop/today/page1.html
@@ -3,6 +3,9 @@
 <head>
         <title>Document</title>
 </head>
+<style>.h1{
+    color: blueviolet;
+}</style>
 <body>
     <h1>New page1</h1>
     <h2>New Year</h2>
